--- a/weather.html
+++ b/weather.html
@@ -1,11 +1,19 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <title>Weather Info</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Weater Info</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1></h1>
+    <div>
+        <div class="card">
+            <div class="search">
+                <input type="text" placeholder="enter city name here" spellcheck="false">
+                <button><img src="search.png"></button>
+            </div>
+        </div>
+    </div>
   </body>
 </html>
