--- a/weather.html
+++ b/weather.html
@@ -7,13 +7,21 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div>
         <div class="card">
             <div class="search">
                 <input type="text" placeholder="enter city name here" spellcheck="false">
-                <button><img src="search.png"></button>
+                <button><img src=".gitignore/search.png"></button>
+            </div>
+            <div class="weather">
+                <img src="gitignore/rain.png" class="weather-icon">
+                <h1 class="temp">&deg;22</h1>
+                <h2 class="city">New York</h2>
+                <div class="details">
+                    <div class="col">
+                        <img src="gitignore/humidity.png">
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
   </body>
 </html>
