--- a/weather.html
+++ b/weather.html
@@ -10,18 +10,47 @@
         <div class="card">
             <div class="search">
                 <input type="text" placeholder="enter city name here" spellcheck="false">
-                <button><img src=".gitignore/search.png"></button>
+                <button><img src="gitignore/search.png" alt="search icon"></button>
             </div>
             <div class="weather">
                 <img src="gitignore/rain.png" class="weather-icon">
-                <h1 class="temp">&deg;22</h1>
-                <h2 class="city">New York</h2>
+                <h1 class="temp"></h1>
+                <h2 class="city"></h2>
                 <div class="details">
                     <div class="col">
                         <img src="gitignore/humidity.png">
+                        <div>
+                            <p class="humidity"></p>
+                            <p>Humidity</p>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <img src="gitignore/wind.png">
+                        <div>
+                            <p class="wind"></p>
+                            <p>Wind Speed</p>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
+        <script>
+            const apiKey ="e594374355ffc0d6fae2338aef91930b";
+            const apiUrl ="https://api.openweathermap.org/data/2.5/weather?units=metric&q=mumbai";
+
+
+            async function checkWeather(){
+                const response =await fetch(apiUrl + `&appid=${apiKey}`);
+                var data  = await response.json();
+                console.log(data);
+
+                document.querySelector(".city").innerHTML= data.name;
+                document.querySelector(".temp").innerHTML= Math.round(data.main.temp) + "&deg;C";
+                document.querySelector(".humidity").innerHTML= data.main.humidity + "%";
+                document.querySelector(".wind").innerHTML= data.wind.speed+ " km/h";
+
+            }
+            checkWeather()
+        </script>
   </body>
 </html>
