--- a/weather.html
+++ b/weather.html
@@ -35,12 +35,15 @@
             </div>
         </div>
         <script>
+            
             const apiKey ="e594374355ffc0d6fae2338aef91930b";
-            const apiUrl ="https://api.openweathermap.org/data/2.5/weather?units=metric&q=mumbai";
+            const apiUrl ="https://api.openweathermap.org/data/2.5/weather?units=metric&q=";
 
+            const searchBox = document.querySelector(".search input");
+            const searchBtn = document.querySelector(".search button");
 
-            async function checkWeather(){
-                const response =await fetch(apiUrl + `&appid=${apiKey}`);
+            async function checkWeather(city){
+                const response =await fetch(apiUrl + city + `&appid=${apiKey}`);
                 var data  = await response.json();
                 console.log(data);
 
@@ -50,7 +53,10 @@
                 document.querySelector(".wind").innerHTML= data.wind.speed+ " km/h";
 
             }
-            checkWeather()
+            searchBtn.addEventListener("click",()=>{
+                checkWeather(searchBox.value);
+            })
+            checkWeather('New York');
         </script>
   </body>
 </html>
