--- a/weather.html
+++ b/weather.html
@@ -3,14 +3,14 @@
   <head>
     <title>Weather Info</title>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=360px, initial-scale=1">
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
         <div class="card">
             <div class="search">
                 <input type="text" placeholder="enter city name here" spellcheck="false">
-                <button><img src="gitignore/search.png" alt="search icon"></button>
+                <button class="responsive"><img src="gitignore/search.png" alt="search icon"></button>
             </div>
             <div class="error">
                 <p>Invalid city name</p>
