--- a/weather.html
+++ b/weather.html
@@ -9,7 +9,7 @@
   <body>
         <div class="card">
             <div class="search">
-                <input type="text" placeholder="Enter City" spellcheck="false">
+                <input type="text" placeholder="Enter City Name" spellcheck="false">
                 <button class="responsive"><img src="gitignore/search.png" alt="search icon"></button>
             </div>
             <div class="error">
